first-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
  template:
    metadata:
      labels:
        app: first-app
    spec:
      containers:
      - name:  first-app
        image: paulopanini/first-app:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
