first-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-app
spec:
  type: ClusterIP
  selector:
    app: first-app
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
